--- a/1)Notes/0-Revision/Feature Engineering/encoders.ipynb
+++ b/1)Notes/0-Revision/Feature Engineering/encoders.ipynb
@@ -866,6 +866,676 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time = pd.DataFrame(tips['time'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Dinner</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Dinner</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Dinner</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Dinner</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Dinner</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>239</th>\n",
+       "      <td>Dinner</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>240</th>\n",
+       "      <td>Dinner</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>241</th>\n",
+       "      <td>Dinner</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>242</th>\n",
+       "      <td>Dinner</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>243</th>\n",
+       "      <td>Dinner</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>244 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       time\n",
+       "0    Dinner\n",
+       "1    Dinner\n",
+       "2    Dinner\n",
+       "3    Dinner\n",
+       "4    Dinner\n",
+       "..      ...\n",
+       "239  Dinner\n",
+       "240  Dinner\n",
+       "241  Dinner\n",
+       "242  Dinner\n",
+       "243  Dinner\n",
+       "\n",
+       "[244 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transform_time=encoder.fit_transform(time).toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [0., 1.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.],\n",
+       "       [1., 0.]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transform_time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features_names=encoder.get_feature_names_out()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['time_Dinner', 'time_Lunch'], dtype=object)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "features_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time_pd=pd.DataFrame(transform_time,columns=features_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time_Dinner</th>\n",
+       "      <th>time_Lunch</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>239</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>240</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>241</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>242</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>243</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>244 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     time_Dinner  time_Lunch\n",
+       "0            1.0         0.0\n",
+       "1            1.0         0.0\n",
+       "2            1.0         0.0\n",
+       "3            1.0         0.0\n",
+       "4            1.0         0.0\n",
+       "..           ...         ...\n",
+       "239          1.0         0.0\n",
+       "240          1.0         0.0\n",
+       "241          1.0         0.0\n",
+       "242          1.0         0.0\n",
+       "243          1.0         0.0\n",
+       "\n",
+       "[244 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "time_pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>time_Dinner</th>\n",
+       "      <th>time_Lunch</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>239</th>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>240</th>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>241</th>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>242</th>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>243</th>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>244 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       time  time_Dinner  time_Lunch\n",
+       "0    Dinner          1.0         0.0\n",
+       "1    Dinner          1.0         0.0\n",
+       "2    Dinner          1.0         0.0\n",
+       "3    Dinner          1.0         0.0\n",
+       "4    Dinner          1.0         0.0\n",
+       "..      ...          ...         ...\n",
+       "239  Dinner          1.0         0.0\n",
+       "240  Dinner          1.0         0.0\n",
+       "241  Dinner          1.0         0.0\n",
+       "242  Dinner          1.0         0.0\n",
+       "243  Dinner          1.0         0.0\n",
+       "\n",
+       "[244 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.concat([time,time_pd],axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
